CloudFormation/trunk/standard-vpc-build.template
{
    "AWSTemplateFormatVersion": "2010-09-09", 
    "Description": "Template CloudFormation script for CUPS AWS environments.", 
    "Mappings": {
        "AWSAMI": {
            "ADMIN": {
                "AMI": "ami-1aa0e76d"
            }, 
            "Centos": {
                "AMI": "ami-1aa0e76d"
            }
        }, 
        "CUPSSubnetConfig": {
            "CAMFWALL": {
                "CIDR": "192.153.213.50/32"
            }, 
            "CAMINFRA": {
                "CIDR": "131.111.159.0/24"
            }, 
            "CAMPT": {
                "CIDR": "131.111.154.0/24"
            }, 
            "MANILLA1": {
                "CIDR": "121.97.34.10/32"
            }, 
            "MANILLA2": {
                "CIDR": "103.23.193.2/32"
            }, 
            "MANILLA3": {
                "CIDR": "121.97.40.34/32"
            }, 
            "MANILLA4": {
                "CIDR": "122.55.14.126/32"
            }, 
            "NY-1": {
                "CIDR": "38.122.225.74/32"
            }, 
            "NY-2": {
                "CIDR": "65.202.160.242/32"
            }, 
            "WIRELESS": {
                "CIDR": "192.153.213.50/32"
            }
        }, 
        "SubnetConfig": {
            "PrivateA": {
                "CIDR": "10.10.21.0/25"
            }, 
            "PrivateB": {
                "CIDR": "10.10.21.128/25"
            }, 
            "PrivateC": {
                "CIDR": "10.10.22.0/25"
            }, 
            "PrivateD": {
                "CIDR": "10.10.22.128/25"
            }, 
            "PublicA": {
                "CIDR": "10.10.20.0/25"
            }, 
            "PublicB": {
                "CIDR": "10.10.20.128/25"
            }, 
            "VPC": {
                "CIDR": "10.10.20.0/22"
            }
        }
    }, 
    "Parameters": {
        "KeyName": {
            "AllowedPattern": "[\\x20-\\x7E]*", 
            "ConstraintDescription": "can contain only ASCII characters.", 
            "Description": "Name of existing SSH Keypair", 
            "MaxLength": "255", 
            "MinLength": "1", 
            "Type": "String"
        }
    }, 
    "Resources": {
        "ADMINSecurityGroup": {
            "Properties": {
                "GroupDescription": "Defines allowed access to the Admin Bastion server", 
                "SecurityGroupEgress": [
                    {}
                ], 
                "SecurityGroupIngress": [
                    {
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "CUPSSubnetConfig", 
                                "CAMINFRA", 
                                "CIDR"
                            ]
                        }, 
                        "FromPort": "22", 
                        "IpProtocol": "tcp", 
                        "ToPort": "22"
                    }, 
                    {
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "CUPSSubnetConfig", 
                                "CAMFWALL", 
                                "CIDR"
                            ]
                        }, 
                        "FromPort": "22", 
                        "IpProtocol": "tcp", 
                        "ToPort": "22"
                    }, 
                    {
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "CUPSSubnetConfig", 
                                "CAMPT", 
                                "CIDR"
                            ]
                        }, 
                        "FromPort": "22", 
                        "IpProtocol": "tcp", 
                        "ToPort": "22"
                    }
                ], 
                "Tags": [
                    {
                        "Key": "Platform", 
                        "Value": "InsertPlatform"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "InsertCluster"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "InsertOwner"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "InsertRole"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Admin Server Security Group"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::SecurityGroup"
        }, 
        "AdminIPAddress": {
            "DependsOn": "GatewayAttachment", 
            "Properties": {
                "Domain": "vpc", 
                "InstanceId": {
                    "Ref": "AdminServer"
                }
            }, 
            "Type": "AWS::EC2::EIP"
        }, 
        "AdminServer": {
            "DependsOn": "ADMINSecurityGroup", 
            "Properties": {
                "ImageId": {
                    "Fn::FindInMap": [
                        "AWSAMI", 
                        "Centos", 
                        "AMI"
                    ]
                }, 
                "InstanceType": "m3.medium", 
                "KeyName": {
                    "Ref": "KeyName"
                }, 
                "SecurityGroupIds": [
                    {
                        "Ref": "ADMINSecurityGroup"
                    }
                ], 
                "SourceDestCheck": "false", 
                "SubnetId": {
                    "Ref": "PublicSubnetA"
                }, 
                "Tags": [
                    {
                        "Key": "Platform", 
                        "Value": "InsertPlatform"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "InsertCluster"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "InsertOwner"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "InsertRole"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Admin Bastion Server"
                    }
                ]
            }, 
            "Type": "AWS::EC2::Instance"
        }, 
        "AppLBSecurityGroup": {
            "Properties": {
                "GroupDescription": "Application Server Load Balancer Security Group", 
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "0.0.0.0/0", 
                        "FromPort": "1", 
                        "IpProtocol": "-1", 
                        "ToPort": "9999"
                    }
                ], 
                "SecurityGroupIngress": [
                    {
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "CUPSSubnetConfig", 
                                "CAMINFRA", 
                                "CIDR"
                            ]
                        }, 
                        "FromPort": "80", 
                        "IpProtocol": "tcp", 
                        "ToPort": "80"
                    }, 
                    {
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "CUPSSubnetConfig", 
                                "CAMPT", 
                                "CIDR"
                            ]
                        }, 
                        "FromPort": "443", 
                        "IpProtocol": "tcp", 
                        "ToPort": "443"
                    }
                ], 
                "Tags": [
                    {
                        "Key": "Platform", 
                        "Value": "InsertPlatform"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "InsertCluster"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "InsertOwner"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "InsertRole"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Application Load Balancer Security Group"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::SecurityGroup"
        }, 
        "AppLoadBalancer": {
            "Properties": {
                "CrossZone": "true", 
                "HealthCheck": {
                    "HealthyThreshold": "3", 
                    "Interval": "15", 
                    "Target": "HTTP:80/", 
                    "Timeout": "10", 
                    "UnhealthyThreshold": "5"
                }, 
                "Instances": [
                    {
                        "Ref": "AppServer"
                    }
                ], 
                "LBCookieStickinessPolicy": [
                    {
                        "CookieExpirationPeriod": "100", 
                        "PolicyName": "Sticky"
                    }
                ], 
                "Listeners": [
                    {
                        "InstancePort": "80", 
                        "LoadBalancerPort": "80", 
                        "PolicyNames": [
                            "Sticky"
                        ], 
                        "Protocol": "HTTP"
                    }
                ], 
                "LoadBalancerName": "Application-Load-Balancer", 
                "Scheme": "internet-facing", 
                "SecurityGroups": [
                    {
                        "Ref": "AppServerSecurityGroup"
                    }
                ], 
                "Subnets": [
                    {
                        "Ref": "PrivateSubnetA"
                    }, 
                    {
                        "Ref": "PrivateSubnetB"
                    }
                ]
            }, 
            "Type": "AWS::ElasticLoadBalancing::LoadBalancer"
        }, 
        "AppServer": {
            "DependsOn": "AppServerSecurityGroup", 
            "Properties": {
                "ImageId": {
                    "Fn::FindInMap": [
                        "AWSAMI", 
                        "Centos", 
                        "AMI"
                    ]
                }, 
                "InstanceType": "m3.medium", 
                "KeyName": {
                    "Ref": "KeyName"
                }, 
                "SecurityGroupIds": [
                    {
                        "Ref": "AppServerSecurityGroup"
                    }
                ], 
                "SourceDestCheck": "false", 
                "SubnetId": {
                    "Ref": "PrivateSubnetA"
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "InsertPlatform"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "InsertCluster"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "InsertOwner"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "InsertRole"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Application Server"
                    }
                ], 
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "", 
                            [
                                "#!/bin/bash", 
                                "yum -y update all"
                            ]
                        ]
                    }
                }
            }, 
            "Type": "AWS::EC2::Instance"
        }, 
        "AppServerSecurityGroup": {
            "Properties": {
                "GroupDescription": "Application Server Security Group", 
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "0.0.0.0/0", 
                        "FromPort": "1", 
                        "IpProtocol": "-1", 
                        "ToPort": "9999"
                    }
                ], 
                "SecurityGroupIngress": [
                    {
                        "FromPort": "22", 
                        "IpProtocol": "tcp", 
                        "SourceSecurityGroupId": {
                            "Ref": "ADMINSecurityGroup"
                        }, 
                        "ToPort": "80"
                    }, 
                    {
                        "FromPort": "80", 
                        "IpProtocol": "tcp", 
                        "SourceSecurityGroupId": {
                            "Ref": "AppLBSecurityGroup"
                        }, 
                        "ToPort": "80"
                    }, 
                    {
                        "FromPort": "443", 
                        "IpProtocol": "tcp", 
                        "SourceSecurityGroupId": {
                            "Ref": "AppLBSecurityGroup"
                        }, 
                        "ToPort": "443"
                    }
                ], 
                "Tags": [
                    {
                        "Key": "Platform", 
                        "Value": "InsertPlatform"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "InsertCluster"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "InsertOwner"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "InsertRole"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Application Server Security Group"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::SecurityGroup"
        }, 
        "GatewayAttachment": {
            "Properties": {
                "InternetGatewayId": {
                    "Ref": "InternetGateway"
                }, 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::VPCGatewayAttachment"
        }, 
        "InternetGateway": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "InsertPlatform"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "InsertCluster"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "InsertOwner"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "InsertRole"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Internet Gateway"
                    }
                ]
            }, 
            "Type": "AWS::EC2::InternetGateway"
        }, 
        "NATGateway": {
            "DependsOn": "GatewayAttachment", 
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "NATIPAddress", 
                        "AllocationId"
                    ]
                }, 
                "SubnetId": {
                    "Ref": "PublicSubnetA"
                } 
            }, 
            "Type": "AWS::EC2::NatGateway"
        }, 
        "NATIPAddress": {
            "DependsOn": "GatewayAttachment", 
            "Properties": {
                "Domain": "vpc"
            }, 
            "Type": "AWS::EC2::EIP"
        }, 
        "PrivateRoute": {
            "DependsOn": "NATGateway", 
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0", 
                "NatGatewayId": {
                    "Ref": "NATGateway"
                }, 
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                }
            }, 
            "Type": "AWS::EC2::Route"
        }, 
        "PrivateRouteTable": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "InsertPlatform"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "InsertCluster"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "InsertOwner"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "InsertRole"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Private routing table"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::RouteTable"
        }, 
        "PrivateSubnetA": {
            "Properties": {
                "AvailabilityZone": "eu-west-1a", 
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "SubnetConfig", 
                        "PrivateA", 
                        "CIDR"
                    ]
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "InsertPlatform"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "InsertCluster"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "InsertOwner"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "InsertRole"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Subnet Availability Zone A (Private)"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::Subnet"
        }, 
        "PrivateSubnetB": {
            "Properties": {
                "AvailabilityZone": "eu-west-1b", 
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "SubnetConfig", 
                        "PrivateB", 
                        "CIDR"
                    ]
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "InsertPlatform"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "InsertCluster"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "InsertOwner"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "InsertRole"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Subnet Availability Zone B (Private)"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::Subnet"
        }, 
        "PrivateSubnetC": {
            "Properties": {
                "AvailabilityZone": "eu-west-1a", 
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "SubnetConfig", 
                        "PrivateC", 
                        "CIDR"
                    ]
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "InsertPlatform"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "InsertCluster"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "InsertOwner"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "InsertRole"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Subnet Availability Zone C (Private)"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::Subnet"
        }, 
        "PrivateSubnetD": {
            "Properties": {
                "AvailabilityZone": "eu-west-1b", 
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "SubnetConfig", 
                        "PrivateD", 
                        "CIDR"
                    ]
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "InsertPlatform"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "InsertCluster"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "InsertOwner"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "InsertRole"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Subnet Availability Zone D (Private)"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::Subnet"
        }, 
        "PublicRoute": {
            "DependsOn": "GatewayAttachment", 
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0", 
                "GatewayId": {
                    "Ref": "InternetGateway"
                }, 
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                }
            }, 
            "Type": "AWS::EC2::Route"
        }, 
        "PublicRouteTable": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "InsertPlatform"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "InsertCluster"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "InsertOwner"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "InsertRole"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Public routing table"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::RouteTable"
        }, 
        "PublicSubnetA": {
            "Properties": {
                "AvailabilityZone": "eu-west-1a", 
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "SubnetConfig", 
                        "PublicA", 
                        "CIDR"
                    ]
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "InsertPlatform"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "InsertCluster"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "InsertOwner"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "InsertRole"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Subnet Availability Zone A (Public)"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::Subnet"
        }, 
        "PublicSubnetB": {
            "Properties": {
                "AvailabilityZone": "eu-west-1b", 
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "SubnetConfig", 
                        "PublicB", 
                        "CIDR"
                    ]
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "InsertPlatform"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "InsertCluster"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "InsertOwner"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "InsertRole"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Subnet Availability Zone B (Public)"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::Subnet"
        }, 
        "SubnetRouteTableAssociationPrivA": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                }, 
                "SubnetId": {
                    "Ref": "PrivateSubnetA"
                }
            }, 
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        }, 
        "SubnetRouteTableAssociationPrivB": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                }, 
                "SubnetId": {
                    "Ref": "PrivateSubnetB"
                }
            }, 
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        }, 
        "SubnetRouteTableAssociationPubA": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                }, 
                "SubnetId": {
                    "Ref": "PublicSubnetA"
                }
            }, 
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        }, 
        "SubnetRouteTableAssociationPubB": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                }, 
                "SubnetId": {
                    "Ref": "PublicSubnetB"
                }
            }, 
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        }, 
        "VPC": {
            "Properties": {
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "SubnetConfig", 
                        "VPC", 
                        "CIDR"
                    ]
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "InsertPlatform"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "InsertCluster"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "InsertOwner"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "InsertRole"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Standard VPC"
                    }
                ]
            }, 
            "Type": "AWS::EC2::VPC"
        }
    }
}
